# GibbsGibbs

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/statistic/: BayesNetwork.cpp  BayesNetwork.h  CMakeLists.txt  CMakeLists.txt~  DExample.cpp  DExample.h  DMultivariateGaussian.cpp  DMultivariateGaussian.h  Density.cpp  Density.h  Distribution.h  Inferencer.cpp  Inferencer.h  Mathcommon.cpp  Mathcommon.h  MersenneTwister.h  Sampler.cpp  Sampler.h  Timer.cpp  Timer.h  Util.h  testStatistic01.cpp  testStatistic02.cpp
